# agent-library

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INIT_OUTPUT.md  LICENSE  PERSONAS.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS
.github/workflows/: lint.yml  release.yml  tests.yml
.github/workflows/scripts/: check-release-exists.sh  create-github-release.sh  create-release-packages.sh  generate-release-notes.sh  get-next-version.sh
docs/: README.md  installation.md  local-development.md  quickstart.md
memory/: personas-guide.md
scripts/bash/: check-prerequisites.sh  common.sh  create-project-context.sh  record-decision.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-project-context.ps1  update-agent-context.ps1
src/agent_lib/: __init__.py
templates/: project-constitution.md
templates/tasks/: architect.md  debug.md  document.md  implement.md  research.md  review.md
tests/: conftest.py  test_cli.py
